# audiofile

./: .gitignore  Makefile.am  autogen.sh  configure.ac
.github/workflows/: build.yml
docs/: Makefile.am  afIdentifyFD.3.txt  afOpenFile.3.txt  afReadMisc.3.txt  asciidoc.conf  sfconvert.1.txt  sfinfo.1.txt
examples/: Makefile.am  alsaplay.cpp
